# tft_parse

./: .gitignore  README.rst  setup.cfg
.github/workflow/: sphinx.yml
docs/source/: conf.py  index.rst  match.json  modules.rst  tft_parse.rst  tmp.py
tests/: match.json
tft_parse/: __init__.py  api.py  tftchampion.py  tftunit.py
