[metadata]
name = tft_parse
version = attr: tft_parse.__version__
description = TFT tft_parse
long_description = file: README.md
keywords = Teamfight Tactics
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9]

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests

[coverage:run]
branch = False
command_line = -m unittest discover -v

[coverage:report]
include = tft_parse/*
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
    raise ValueError
skip_empty = True
show_missing = True

[flake8]
exit-zero = True
ignore =
    E252,  # Missing whitespace around parameter equals
    E226,  # Missing whitespace around arithmetic operator
max-line-length = 120
per-file-ignores =
    __init__.py: F401
exclude =
    .git,
    __pycache__,
    venv,
    __init__.py